metadata/force-app/main/default/objects/Integration__c/Integration__c.object-meta.xml
<CustomObject>
    <label>Integration</label>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>