metadata/force-app/main/default/objects/Integration__c/fields/Backline_Support_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Backline_Support_Provided_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backline Support Provided By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrations (Backline Support Provided By)</relationshipLabel>
    <relationshipName>Integrations4</relationshipName>
    <type>Lookup</type>
</CustomField>