metadata/force-app/main/default/objects/Integration__c/fields/Built_by_1__c.field-meta.xml
<CustomField>
    <fullName>Built_by_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Built by (Deprecated)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>