metadata/force-app/main/default/objects/Integration__c/fields/Bynder_ARR_MRR__c.field-meta.xml
<CustomField>
    <fullName>Bynder_ARR_MRR__c</fullName>
    <label>Bynder ARR/MRR</label>
    <type>TextArea</type>
</CustomField>