metadata/force-app/main/default/objects/Integration__c/fields/Bynder_One_Off_Costs__c.field-meta.xml
<CustomField>
    <fullName>Bynder_One_Off_Costs__c</fullName>
    <inlineHelpText>Bynder One-Off Costs (only needed for 1st integration)</inlineHelpText>
    <label>Bynder One-Off Costs</label>
    <type>TextArea</type>
</CustomField>