metadata/force-app/main/default/objects/Integration__c/fields/Bynder_or_Partner_paper__c.field-meta.xml
<CustomField>
    <fullName>Bynder_or_Partner_paper__c</fullName>
    <label>Bynder or Partner paper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bynder</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Either</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>