metadata/force-app/main/default/objects/Integration__c/fields/Bynder_Partner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Partner_Manager__c</fullName>
    <formula>Technology__r.Technology_Provider__r.Account_Owner_in_text__c</formula>
    <inlineHelpText>The contact information for the Bynder Partner Manager for the integration. This should include the name, email address, and phone number of the Bynder Partner Manager.</inlineHelpText>
    <label>Bynder Partner Manager</label>
    <type>Text</type>
</CustomField>