metadata/force-app/main/default/objects/Integration__c/fields/Bynder_product__c.field-meta.xml
<CustomField>
    <fullName>Bynder_product__c</fullName>
    <label>Bynder product (Deprecated)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bynder</fullName>
            </value>
            <value>
                <fullName>Webdam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>