metadata/force-app/main/default/objects/Integration__c/fields/Commercial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact information for the commercial team for the integration. This should include the name, email address, and phone number of the commercial contact.</inlineHelpText>
    <label>Commercial Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>