metadata/force-app/main/default/objects/Integration__c/fields/Date_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_completion__c</fullName>
    <label>Date of completion (Deprecated)</label>
    <type>Date</type>
</CustomField>