metadata/force-app/main/default/objects/Integration__c/fields/Demo_Process__c.field-meta.xml
<CustomField>
    <fullName>Demo_Process__c</fullName>
    <inlineHelpText>The process for requesting a demo of the integration. This should include a link to the demo request form, as well as any other information that is needed to request a demo.</inlineHelpText>
    <label>Demo Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>