metadata/force-app/main/default/objects/Integration__c/fields/Go_live_date__c.field-meta.xml
<CustomField>
    <fullName>Go_live_date__c</fullName>
    <label>Go live date (Deprecated)</label>
    <type>Date</type>
</CustomField>