metadata/force-app/main/default/objects/Integration__c/fields/In_revision__c.field-meta.xml
<CustomField>
    <fullName>In_revision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In revision (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>