metadata/force-app/main/default/objects/Integration__c/fields/Integration_Owner__c.field-meta.xml
<CustomField>
    <fullName>Integration_Owner__c</fullName>
    <description>Indicates the owner of the integration. BODEV-421</description>
    <label>Integration Owner (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bynder-built</fullName>
            </value>
            <value>
                <fullName>Partner built</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>