metadata/force-app/main/default/objects/Integration__c/fields/Integration_Provider__c.field-meta.xml
<CustomField>
    <fullName>Integration_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the company that provides the integration.</inlineHelpText>
    <label>Integration Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrations (Integration Provider)</relationshipLabel>
    <relationshipName>Integrations1</relationshipName>
    <type>Lookup</type>
</CustomField>