metadata/force-app/main/default/objects/Integration__c/fields/Integration_summary_notes__c.field-meta.xml
<CustomField>
    <fullName>Integration_summary_notes__c</fullName>
    <label>High level use case (Deprecated)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>