metadata/force-app/main/default/objects/Integration__c/fields/Integration_Support__c.field-meta.xml
<CustomField>
    <fullName>Integration_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the company that provides support around the integration. This could include phone support, email support, or online support</inlineHelpText>
    <label>Integration Support</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrations (Integration Support)</relationshipLabel>
    <relationshipName>Integrations2</relationshipName>
    <type>Lookup</type>
</CustomField>