metadata/force-app/main/default/objects/Integration__c/fields/Integrations_Hub__c.field-meta.xml
<CustomField>
    <fullName>Integrations_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrations Hub</label>
    <type>Checkbox</type>
</CustomField>