metadata/force-app/main/default/objects/Integration__c/fields/Link_to_confluence_page__c.field-meta.xml
<CustomField>
    <fullName>Link_to_confluence_page__c</fullName>
    <description>Link to the confluence page with more information</description>
    <label>Link to confluence page</label>
    <type>Url</type>
</CustomField>