metadata/force-app/main/default/objects/Integration__c/fields/Link_to_DAM_Success_article__c.field-meta.xml
<CustomField>
    <fullName>Link_to_DAM_Success_article__c</fullName>
    <description>BODEV-421</description>
    <label>Link to DAM Success article (Deprecated)</label>
    <type>Url</type>
</CustomField>