metadata/force-app/main/default/objects/Integration__c/fields/Link_to_Knowledge_base_article__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Knowledge_base_article__c</fullName>
    <description>Link to knowledge base article</description>
    <label>Link to Knowledge base article</label>
    <type>Url</type>
</CustomField>