metadata/force-app/main/default/objects/Integration__c/fields/Link_to_marketplace__c.field-meta.xml
<CustomField>
    <fullName>Link_to_marketplace__c</fullName>
    <label>Link to marketplace</label>
    <type>Url</type>
</CustomField>