metadata/force-app/main/default/objects/Integration__c/fields/One_off_cost__c.field-meta.xml
<CustomField>
    <fullName>One_off_cost__c</fullName>
    <inlineHelpText>The one-off cost for the integration. This could be a one-time fee, or it could be a subscription fee.</inlineHelpText>
    <label>One-off cost</label>
    <type>TextArea</type>
</CustomField>