metadata/force-app/main/default/objects/Integration__c/fields/Partner_ARR_MRR__c.field-meta.xml
<CustomField>
    <fullName>Partner_ARR_MRR__c</fullName>
    <label>Partner ARR/MRR</label>
    <type>TextArea</type>
</CustomField>