metadata/force-app/main/default/objects/Integration__c/fields/Partner_One_Off_Costs__c.field-meta.xml
<CustomField>
    <fullName>Partner_One_Off_Costs__c</fullName>
    <label>Partner One-Off Costs</label>
    <type>TextArea</type>
</CustomField>