metadata/force-app/main/default/objects/Integration__c/fields/Partner_Support_Escalation_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Partner_Support_Escalation_Contacts__c</fullName>
    <label>Partner Support Escalation Contacts</label>
    <type>TextArea</type>
</CustomField>