metadata/force-app/main/default/objects/Integration__c/fields/Partner_Support_Hours__c.field-meta.xml
<CustomField>
    <fullName>Partner_Support_Hours__c</fullName>
    <label>Partner Support Hours</label>
    <type>TextArea</type>
</CustomField>