metadata/force-app/main/default/objects/Integration__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <inlineHelpText>The platform that the integration is compatible with.</inlineHelpText>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bynder</fullName>
            </value>
            <value>
                <fullName>Webdam</fullName>
            </value>
            <value>
                <fullName>Content Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>