metadata/force-app/main/default/objects/Integration__c/fields/Revenue_share_model__c.field-meta.xml
<CustomField>
    <fullName>Revenue_share_model__c</fullName>
    <inlineHelpText>The revenue share model that is used for the integration. This could be a percentage of sales, a flat fee, or another model.</inlineHelpText>
    <label>Revenue share model</label>
    <type>TextArea</type>
</CustomField>