metadata/force-app/main/default/objects/Integration__c/fields/Scoping_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Scoping_Requirements__c</fullName>
    <inlineHelpText>The scoping and requirements for the integration. This should include a list of the features that the integration needs to support, as well as any limitations or constraints.</inlineHelpText>
    <label>Scoping/Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>