metadata/force-app/main/default/objects/Integration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Feasibility Review</fullName>
            </value>
            <value>
                <fullName>Technical Review</fullName>
            </value>
            <value>
                <fullName>In development</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Won&apos;t do</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Needs Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>