metadata/force-app/main/default/objects/Integration__c/fields/Strategic__c.field-meta.xml
<CustomField>
    <fullName>Strategic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this integration strategic?</description>
    <label>Strategic (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>