metadata/force-app/main/default/objects/Integration__c/fields/Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Support_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact information for the support team for the integration. This should include the name, email address, and phone number of the support contact.</inlineHelpText>
    <label>Support Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Integrations (Support Contact)</relationshipLabel>
    <relationshipName>Integrations1</relationshipName>
    <type>Lookup</type>
</CustomField>