metadata/force-app/main/default/objects/Integration__c/fields/Support_Website__c.field-meta.xml
<CustomField>
    <fullName>Support_Website__c</fullName>
    <label>Support Website</label>
    <type>Url</type>
</CustomField>