metadata/force-app/main/default/objects/Integration__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <inlineHelpText>The technology that the application integrates with.</inlineHelpText>
    <label>Technology</label>
    <referenceTo>Technology__c</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>