metadata/force-app/main/default/objects/Integration__c/fields/Technology_Provider__c.field-meta.xml
<CustomField>
    <fullName>Technology_Provider__c</fullName>
    <formula>Technology__r.Technology_Provider__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the company that provides the underlying technology we integrate to.</inlineHelpText>
    <label>Technology Provider</label>
    <type>Text</type>
</CustomField>