metadata/force-app/main/default/objects/Integration__c/fields/X1st_Line_Support_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>X1st_Line_Support_Provided_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Line Support Provided By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Integrations (1st Line Support Provided By)</relationshipLabel>
    <relationshipName>Integrations3</relationshipName>
    <type>Lookup</type>
</CustomField>