metadata/force-app/main/default/objects/Integration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Built_by_1__c</columns>
    <columns>Link_to_marketplace__c</columns>
    <columns>Integration_summary_notes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Live</value>
    </filters>
    <label>All</label>
</ListView>