metadata/force-app/main/default/objects/Integration__c/listViews/Available_Integrations.listView-meta.xml
<ListView>
    <fullName>Available_Integrations</fullName>
    <columns>NAME</columns>
    <columns>Integration_Provider__c</columns>
    <columns>Technology__c</columns>
    <columns>Platform__c</columns>
    <columns>Status__c</columns>
    <columns>Integrations_Hub__c</columns>
    <columns>Integration_Support__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>(DO NOT USE)</value>
    </filters>
    <label>Available Integrations</label>
</ListView>