metadata/force-app/main/default/objects/Integration__c/listViews/CDN.listView-meta.xml
<ListView>
    <fullName>CDN</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Content Delivery Networks</value>
    </filters>
    <label>CDN</label>
</ListView>