metadata/force-app/main/default/objects/Integration__c/listViews/Content_Management_Solution.listView-meta.xml
<ListView>
    <fullName>Content_Management_Solution</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Content Management Solution</value>
    </filters>
    <label>Content Management Solution</label>
</ListView>