metadata/force-app/main/default/objects/Integration__c/listViews/Content_Operations.listView-meta.xml
<ListView>
    <fullName>Content_Operations</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Content Operations</value>
    </filters>
    <label>Content Operations</label>
</ListView>