metadata/force-app/main/default/objects/Integration__c/listViews/CRM.listView-meta.xml
<ListView>
    <fullName>CRM</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Customer Relationship Management</value>
    </filters>
    <label>CRM</label>
</ListView>