metadata/force-app/main/default/objects/Integration__c/listViews/Digital_Rights_Management.listView-meta.xml
<ListView>
    <fullName>Digital_Rights_Management</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Digital Rights Management</value>
    </filters>
    <label>Digital Rights Management</label>
</ListView>