metadata/force-app/main/default/objects/Integration__c/listViews/E_commerce.listView-meta.xml
<ListView>
    <fullName>E_commerce</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>E-Commerce</value>
    </filters>
    <label>E-commerce</label>
</ListView>