metadata/force-app/main/default/objects/Integration__c/listViews/Email_Marketing.listView-meta.xml
<ListView>
    <fullName>Email_Marketing</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>contains</operation>
        <value>Email</value>
    </filters>
    <label>Email Marketing</label>
</ListView>