metadata/force-app/main/default/objects/Integration__c/listViews/Integration_Requests.listView-meta.xml
<ListView>
    <fullName>Integration_Requests</fullName>
    <columns>NAME</columns>
    <columns>Built_by_1__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Integration_summary_notes__c</columns>
    <columns>In_revision__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Requested,Feasibility Review,Technical Review,Won&apos;t do</value>
    </filters>
    <label>Integration Requests</label>
</ListView>