metadata/force-app/main/default/objects/Integration__c/listViews/Learning_Management_System.listView-meta.xml
<ListView>
    <fullName>Learning_Management_System</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Learning Management System</value>
    </filters>
    <label>Learning Management System</label>
</ListView>