metadata/force-app/main/default/objects/Integration__c/listViews/Marketing_Automation.listView-meta.xml
<ListView>
    <fullName>Marketing_Automation</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Marketing Automation</value>
    </filters>
    <label>Marketing Automation</label>
</ListView>