metadata/force-app/main/default/objects/Integration__c/listViews/Product_Information_Management.listView-meta.xml
<ListView>
    <fullName>Product_Information_Management</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Product Information Management</value>
    </filters>
    <label>Product Information Management</label>
</ListView>