metadata/force-app/main/default/objects/Integration__c/listViews/Project_Management.listView-meta.xml
<ListView>
    <fullName>Project_Management</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Project Management</value>
    </filters>
    <label>Project Management</label>
</ListView>